syntax = "proto3";

package spark.v1;

message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  string job_id = 1;
  string status = 2;
  string error_message = 3;
}
